[tool.poetry]
name = "dash"
version = "0.1.0"
description = "A modern list library for Hy"
authors = ["vhqr0 <zq_cmd@163.com>"]
readme = "readme.org"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hy = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
