[tool.poetry]
name = "dash-hy"
version = "0.1.0"
description = "A modern list library for Hy"
authors = ["vhqr0 <zq_cmd@163.com>"]
readme = "readme.org"
packages = [{ include = "dash" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
hy = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
